# uva_common

./: .gitignore  0 - Build Token Tables.ipynb  1 - Method Demo.ipynb  2 - Experiment class.ipynb  3 - Speech Signal.ipynb  4 - Interactive.ipynb  Author Differences.ipynb  Build Token Tables.ipynb  README.md  Testing.ipynb  Token Analysis.ipynb  pyproject.toml  requirements.txt  speech_signal.py
dices_common/: __init__.py
uva_common/: __init__.py
