[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dices-common"
version = "0.1.0"
description = "Ancillary code for parsing Perseus Greek texts for DICES experiments"
requires-python = ">=3.10"
dependencies = [
    "dicesapi>=2.0,<3",
    "GitPython>=3.1,<4",
    "lxml>=6.0,<7",
    "MyCapytain>=3.0,<4",
    "pandas>=2.3,<3",
    "requests>=2.32,<3",
    "spacy>=3.7,<4",
    "spacy-transformers>=1.3,<2",
]

[project.optional-dependencies]
models = [
    "grc_odycy_joint_trf @ https://huggingface.co/chcaa/grc_odycy_joint_trf/resolve/main/grc_odycy_joint_trf-0.7.0-py3-none-any.whl",
]
